# gtt

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: errors.rs  lib.rs  main.rs
src/commands/: config_cmd.rs  export.rs  init.rs  mod.rs  report.rs  status.rs  verify.rs
src/config/: loader.rs  mod.rs  types.rs
src/git/: log.rs  mod.rs  parser.rs
src/output/: chart.rs  csv.rs  json_fmt.rs  mod.rs  table.rs
src/session/: analyzer.rs  mod.rs  types.rs
tests/: git_parser_test.rs  session_algorithm_test.rs
tests/fixtures/: sample_git_log.txt
