[package]
name = "gtt"
version = "0.1.0"
edition = "2021"
description = "Git-based time tracker for freelancers"
license = "MIT"
keywords = ["git", "time-tracking", "freelance", "billing", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
chrono       = { version = "0.4", features = ["serde"] }
comfy-table  = "7"
dirs         = "5"
colored      = "2"
inquire      = "0.7"
csv          = "1"
anyhow       = "1"
thiserror    = "1"

[dev-dependencies]
tempfile     = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
